# VeritasAI

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
docs/: DEMO_SCRIPT.md  EXECUTIVE_OVERVIEW.md  FINAL_SUBMISSION_AUDIT.md  FIRMABLE_SUBMISSION_AUDIT.md  HOW_I_BUILT_THIS.md  PRODUCTION_READINESS_REVIEW.md  PROJECT_STATE.md  STAKEHOLDER_FEEDBACK_INTEGRATION.md  WEEKEND_SUBMISSION_NOTE.md  architecture-review.md  checks-writeup.md  dashboard-design-review.md  dashboard-implementation-plan.md  dashboard-product-spec.md  dashboard-query-audit.md  dashboard-v1-scope.md  data-quality-findings.md  eval-results.md  evaluation-strategy.md  observability.md  phase2-llm-architecture.md  phase4-pipeline-review.md  pipeline-design.md  source-drift-intelligence.md  storage-design.md
screenshots/: README.md
scripts/: capture_dashboard_screenshots.sh  dashboard_render_check.py  profile_dataset.py  seed_demo_db.py
skills/news-events-quality-check/: SKILL.md
skills/news-events-remediation/: SKILL.md
src/veritas/: __init__.py  config.py
src/veritas/dashboard/: __init__.py  app.py
src/veritas/dashboard/components/: __init__.py  drilldown.py  states.py  widgets.py
src/veritas/dashboard/pages/: __init__.py  cost_efficiency.py  event_detail.py  judge_performance.py  platform_health.py  quality_intelligence.py  review_viewer.py  trust_center.py
src/veritas/dashboard/repositories/: __init__.py  base.py  cost_repository.py  eval_repository.py  event_repository.py  rows.py  trace_repository.py  verdict_repository.py
src/veritas/dashboard/services/: __init__.py  aggregation.py  cost_service.py  event_service.py  formatting.py  judge_service.py  platform_service.py  quality_service.py  review_service.py  scoring.py  trust_service.py
src/veritas/dashboard/viewmodels/: __init__.py  common.py  cost.py  event_detail.py  judge.py  platform.py  quality.py  review.py  trust.py
src/veritas/domain/: __init__.py  models.py
src/veritas/evals/: __init__.py  __main__.py  cli.py  dataset.py  metrics.py  report.py  runner.py
src/veritas/evals/datasets/entity_resolution_v1/: dataset.jsonl
src/veritas/evals/datasets/entity_resolution_v1/predictions/: v1.json
src/veritas/evals/datasets/semantic_accuracy_v1/: dataset.jsonl
src/veritas/evals/datasets/semantic_accuracy_v1/predictions/: v1.json  v2.json
src/veritas/evals/datasets/source_credibility_v1/: dataset.jsonl
src/veritas/evals/datasets/source_credibility_v1/predictions/: v1.json
src/veritas/ingest/: __init__.py  discovery.py  parser.py
src/veritas/judges/: __init__.py  anthropic.py  base.py  gemini.py  protocol.py  replay.py  schema.py
src/veritas/llm_gateway/: __init__.py  budget.py  errors.py  gateway.py  pricing.py  providers.py  retry.py  types.py
src/veritas/monitoring/: __init__.py  alerts.py  events.py  logging.py  otel.py  sinks.py
src/veritas/pipeline/: __init__.py  contracts.py  escalation.py  remediation.py  routing.py  runner.py
src/veritas/prompt_registry/: __init__.py  registry.py  spec.py
src/veritas/prompt_registry/prompts/: entity_resolution.v1.yaml  semantic_accuracy.v1.yaml  source_credibility.v1.yaml
src/veritas/rules/: __init__.py  base.py  checks.py  engine.py  metrics.py  registry.py
src/veritas/store/: __init__.py  base.py  database.py  models.py  repositories.py  sinks.py
tests/: conftest.py  test_dashboard_integration.py  test_dashboard_repositories.py  test_dashboard_services.py  test_dashboard_viewmodels.py  test_discovery.py  test_evals.py  test_judges.py  test_llm_gateway.py  test_monitoring.py  test_parser.py  test_pipeline.py  test_prompt_registry.py  test_rules.py  test_store.py
tests/fixtures/feed/: part_a.jsonl
tests/fixtures/feed/nested/: part_b.ndjson
