[project]
name = "veritas-ai"
version = "0.1.0"
description = "AI-native data quality platform for news-event intelligence (rules + LLM judges + agentic remediation)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "streamlit>=1.36",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.2",
    "types-PyYAML>=6.0",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

# --- Ruff ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "C4",       # flake8-comprehensions
    "PTH",      # flake8-use-pathlib (no hardcoded os.path / string paths)
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
# The profiling script bootstraps sys.path so it runs without an editable install.
"scripts/*" = ["E402"]

# --- MyPy (strict from day one) -----------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "scripts", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Streamlit ships no strict-clean types; force it to Any everywhere so the gate
# does not depend on its (untyped) surface. Logic layers never import it.
[[tool.mypy.overrides]]
module = ["streamlit"]
ignore_missing_imports = true
follow_imports = "skip"

# UI layers (only these import streamlit). Logic layers — repositories, services,
# viewmodels — remain fully strict. The relaxations below are exactly the strict
# sub-checks that streamlit's untyped decorators/calls trip, and nothing more.
[[tool.mypy.overrides]]
module = [
    "veritas.dashboard.app",
    "veritas.dashboard.pages.*",
    "veritas.dashboard.components.*",
]
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

# --- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
